# Genesis

./: .gitignore  CMakeLists.txt  todo
src/: CMakeLists.txt  functions.c  genesis.c  genesis.h
tests/: CMakeLists.txt  arithmetic_tests.c  bitwise_tests.c  control_flow_tests.c  helper.c  helper.h  interrupt_tests.c  loop_tests.c  memory_tests.c  section.c  test.bat  tests.c  tests.h
